prevent white space collapsing in user input

--- a/src/experiment/components/styles/TrialInput.module.css
+++ b/src/experiment/components/styles/TrialInput.module.css
@@ -9,6 +9,7 @@
   margin: 10px 0px;
   background-color: #dbf2ff;
   color: #002438;
+  white-space: pre-wrap;
 }
 .trialInput.focused {
   border-color: #87a6fa;
@@ -21,15 +22,16 @@
 }
 
 .caretWrapper {
-  display: inline-block;
+  display: inline;
   position: relative;
   width: 0;
   height: 0;
 }
 
 .caret {
+  display: inline-block;
   position: absolute;
-  top: -1.1em;
+  top: -0.1em;
   height: 1.4em;
   margin-left: -1px;
   width: 2px;
